<resources>
    <string name="app_name">Live Now</string>
    <string name="action_settings">Settings</string>


    <!--RegisterLogin res-->
    <string name="already_have_account">Already have an account? Login here</string>
    <string name="name_user">Name</string>
    <string name="email_user">E-mail</string>
    <string name="password_user">Password</string>
    <string name="button_Login">Login</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_sign_up">Sign up</string>
    <string name="logo_description">Logo</string>
    <string name="logout_button">Logout</string>

    <!--Profile res-->
    <string name="edit_profile">Edit Profile</string>
    <string name="distance_text_profile">Distance: </string>
    <string name="save">Save</string>
    <string name="profile_pic_desc">Profile picture</string>
    <string name="birth_date">Birth date:</string>
    <string name="gender_edit_text">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>

    <!--Toolbar res-->
    <string name="toolbar_home">Home</string>
    <string name="toolbar_list">Activity List</string>
    <string name="toolbar_create">Create</string>
    <string name="toolbar_social">Social</string>
    <string name="toolbar_profile">Profile</string>



</resources>
