<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.now.live.livenow.RegisterLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/logoIcon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_description" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/nameField"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/logoIcon"
        android:layout_alignLeft="@+id/passwordField"
        android:layout_alignStart="@+id/passwordField"
        android:hint="@string/name_user"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailField"
        android:layout_below="@+id/nameField"
        android:layout_alignLeft="@+id/nameField"
        android:layout_alignStart="@+id/nameField"
        android:hint="@string/email_user"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordField"
        android:layout_below="@+id/emailField"
        android:layout_centerHorizontal="true"
        android:hint="@string/password_user"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button_Signup"
        android:id="@+id/sign_up_button"
        android:layout_below="@+id/passwordField"
        android:layout_centerHorizontal="true"
        android:onClick="addNewUser"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/button_Login"
        android:id="@+id/login_button"
        android:layout_below="@+id/userExistText"
        android:layout_alignLeft="@+id/sign_up_button"
        android:onClick="loginOnClick"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:id="@+id/userExistText"
        android:layout_below="@+id/sign_up_button"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
