<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_edit_text"
            android:textSize="16sp"
            android:layout_gravity="center_vertical" />

        <Space
            android:layout_width="15dp"
            android:layout_height="match_parent" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gender_group"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:id="@+id/male_radio"
                android:checked="false"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:id="@+id/female_radio"
                android:layout_gravity="center_horizontal"
                android:checked="false"
                android:textSize="16sp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:id="@+id/other_radio"
                android:layout_gravity="right"
                android:checked="false"
                android:textSize="16sp" />

        </RadioGroup>

    </LinearLayout>
</RelativeLayout>