<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.now.live.livenow.LoginFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/logoIcon"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo_description" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/login_email"
            android:hint="@string/email_user"
            android:layout_below="@+id/logoIcon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="137dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/login_password"
            android:layout_below="@+id/login_email"
            android:layout_centerHorizontal="true"
            android:hint="@string/password_user"/>
    </RelativeLayout>
</FrameLayout>
